# MCGrad

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: main.yaml  tutorials.yaml
scripts/: sync_notebooks.sh  test_docs.sh
sphinx/source/: conf.py  index.rst
sphinx/source/api/: base.rst  methods.rst  metrics.rst  plotting.rst  segmentation.rst  tuning.rst  utils.rst
src/: methods.py  metrics.py  plotting.py  segmentation.py  tuning.py
src/mcgrad/: _compat.py  _segmentation.py  _utils.py  base.py  cas_logger_design.md  methods.py  metrics.py  plotting.py  tuning.py
src/multicalibration/: _compat.py  _utils.py  base.py  methods.py  metrics.py  plotting.py  segmentation.py  tuning.py  utils.py
tests/: conftest.py  test_compat.py  test_methods.py  test_metrics.py  test_multitask_tuning.py  test_plotting.py  test_segmentation.py  test_tuning.py  test_utils.py
tutorials/: 01_mcgrad_core.ipynb  01_mcgrad_core.py  02_calibrating_llm_outputs.ipynb  README.md  _build_02_notebook.py
website/: docusaurus.config.js  docusaurus.config.mjs  package-lock.json  package.json  sidebars.js
website/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
website/docs/: contributing.md  installation.md  intro.md  measuring-multicalibration.md  methodology.md  quickstart.md  tutorials.md  why-mcboost.md  why-mcgrad.md
website/src/: outboundTracking.js
(+40 files in other folders)
