[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "MCGrad"
version = "0.1.0"
description = "Production-ready multicalibration for machine learning"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "lightgbm>=3.0.0",
    "plotly>=5.0.0",
    "pyarrow>=10.0.0",
    "matplotlib>=3.3.0",
    "cffi>=1.15.0",
    "ax-platform>=1.1.2,<1.2.0",  # Version 1.2.0 has behavioral changes that affect our tests
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "toml>=0.10.2",  # Required for isort to read pyproject.toml
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
